# dolios-agent

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HARDENED.md  README.md  SECURITY-AUDIT.md  SECURITY_AUDIT.md  docker-compose.yml  dolios-technical-prd.md  pyproject.toml
.aidlc-rule-details/: upstream-sync.yaml
.aidlc-rule-details/common/: coding-standards.md
.aidlc-rule-details/construction/: implementation-rules.md
.aidlc-rule-details/extensions/dolios-security/: sec-rules.md
.aidlc-rule-details/inception/: requirements-validation.md
.aidlc-rule-details/operations/: deployment-rules.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
aidlc-docs/: aidlc-state.md  native-integration-plan.md  release-checklist.md
brand/: SOUL.md  context.md  voice_guidelines.md
dolios/: __init__.py  aidlc_engine.py  brand.py  cli.py  cli_commands.py  config.py  inference_router.py  io.py  orchestrator.py  policy_bridge.py  release_verifier.py  upstream_manager.py  vendor_path.py
dolios-blueprint/: blueprint.yaml
dolios-blueprint/policies/: dolios-sandbox.yaml
dolios-brand/: brand-brief.docx  brand-identity-kit.jsx
dolios-brand/colors/: palette.css  palette.json
dolios-brand/typography/: type-scale.css
dolios/integrations/: __init__.py  evolution_adapter.py  evolution_vendor.py  fusion_runtime.py  hermes_adapter.py  sandbox_adapter.py
dolios/policy/: __init__.py  engine.py  matcher.py  presets.py
dolios/sandbox/: __init__.py  backend.py  docker.py  local.py  openshell.py
dolios/security/: __init__.py  audit.py  dlp.py  vault.py  workflow.py
environments/: nemoclaw_backend.py  nemoclaw_helpers.py
evolution/: constraint_gates.py  dolios_targets.py  trace_collector.py
policies/: dolios-default.yaml  workflow.yaml
policies/presets/: messaging.yaml
scripts/: install.sh
skills/aidlc-phase/: SKILL.md  capabilities.yaml
skills/evolution-report/: SKILL.md  capabilities.yaml
skills/model-switch/: SKILL.md  capabilities.yaml
skills/policy-request/: SKILL.md  capabilities.yaml
skills/sandbox-status/: SKILL.md  capabilities.yaml
skills/trace-analyze/: SKILL.md  capabilities.yaml
tests/: conftest.py  test_aidlc_engine.py  test_audit.py  test_brand.py  test_capabilities.py  test_config.py  test_dlp.py  test_evolution.py  test_fusion_runtime.py  test_hermes_adapter_guard.py  test_inference_router.py  test_integration_boundaries.py  test_nemoclaw_backend.py  test_orchestrator.py  test_policy_bridge.py  test_release_verifier.py  test_upstream_manager.py  test_vault.py  test_vendor_compatibility.py  test_workflow_policy.py
