[project]
name = "dolios"
version = "0.2.0"
description = "The Crafty Agent — self-improving, sandboxed, methodology-aware agentic AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Aaryan Guglani" },
]

dependencies = [
    # Core
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",

    # Inference routing
    "openai>=1.0",
    "litellm>=1.75",

    # Self-evolution
    "dspy>=3.0",
]

[project.optional-dependencies]
hermes = [
    # Hermes Agent core deps (install when running full agent)
    "anthropic>=0.39.0",
    "tenacity",
    "jinja2",
    "prompt_toolkit",
    "fire",
    "platformdirs",
]
nemoclaw = [
    # NemoClaw blueprint runner deps
    "pyyaml>=6.0",
]
evolution = [
    "dspy>=3.0",
    "reportlab",
]
messaging = [
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
    "slack-sdk>=3.0",
]
optional-tools = [
    # Optional Hermes integrations loaded when dependencies are present
    "firecrawl-py",
    "fal-client",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1",
]
all = [
    "dolios[hermes,nemoclaw,evolution,messaging,optional-tools,dev]",
]

[project.scripts]
dolios = "dolios.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dolios"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
